cleanup & deleting todo code along.

--- a/javascript/arrays/list.html
+++ b/javascript/arrays/list.html
@@ -7,15 +7,16 @@
             font-weight: bold;
         }
     </style>
-    <script type="text/javascript" src="list.js"></script>
 </head>
 <body>
 <h1>Todo List</h1>
 <ul>
     <li>"new" - Add a Todo</li>
     <li>"list" - View all Todos</li>
+    <li>"delete" - Remove specific ToDo</li>
     <li>"quit" - Quit App</li>
 </ul>
 
 </body>
+<script type="text/javascript" src="list.js"></script>
 </html>
