More dom manupulation and intro to event handlers.

--- a/dom/dom-demo.html
+++ b/dom/dom-demo.html
@@ -15,6 +15,10 @@
     		color: orange;
     		border: 5px solid red;
     	}
+        .crossed-out {
+            text-decoration: line-through;
+            color: green;
+        }
     </style>
 </head>
 <body>
