More complex javascript (score) game using events/manipulation.

--- a/dom/events/events.html
+++ b/dom/events/events.html
@@ -2,12 +2,18 @@
 <html>
 <head>
     <title>Events</title>
+    <style type="text/css">
+        .full-color {
+            background: purple;
+        }
+    </style>
 </head>
 <body>
 
     <button>Click Me!</button>
 
     <p>No One has clicked me Yet</p>
+
+    <script type="text/javascript" src="events.js"></script>
 </body>
-<script type="text/javascript" src="events.js"></script>
 </html>
