--- a/jquery/jqueryDemo.html
+++ b/jquery/jqueryDemo.html
@@ -14,12 +14,20 @@
 	<!-- <script type="text/javascript" src="lib/jquery-3.1.0.min.js"></script> -->
 	<!-- Using CDN -->
 	<script   src="http://code.jquery.com/jquery-3.1.0.min.js"   integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s="   crossorigin="anonymous"></script>
-	<script type="text/javascript" src="jqueryDemo.js"></script>
 </head>
 <body>
 
-<h1>jQuery Demo!</h1>
-<button id="clickme">Click Me!</button>
-<img src="http://i.imgur.com/qK42fUu.jpg">
+	<h1>jQuery Demo!</h1>
+
+	<ul>
+		<li>Newt</li>
+		<li>Howler Monkey <a href="monkey.com">Monkey.com</a></li>
+		<li id="cute">Pine Marten</li>
+	</ul>
+
+	<button id="clickme">Click Me!</button>
+	<img src="http://i.imgur.com/qK42fUu.jpg">
+
+	<script type="text/javascript" src="jqueryDemo.js"></script>
 </body>
 </html>
