jQuery methods, events, effects

--- a/jquery/methods.html
+++ b/jquery/methods.html
@@ -14,6 +14,17 @@
 		    float: left;
 		    margin: 1.66%;
 		}
+		.correct {
+			color: green;
+		}
+		.wrong {
+			color: red;
+			background: pink;
+		}
+		.done {
+			color: gray;
+			text-decoration: line-through;
+		}
 	</style>
 </head>
 <body>
